k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: motorsport
  labels:
    app.kubernetes.io/part-of: motorsport
    pod-security.kubernetes.io/enforce: restricted
    pod-security.kubernetes.io/enforce-version: latest
